<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:layout_width="wrap_content">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instheight"></TextView>
    <EditText android:inputType="number" android:layout_width="68dp" android:layout_height="wrap_content" android:id="@+id/txtheight" android:text="@string/defaultheight">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instweight"></TextView>
    <EditText android:inputType="number" android:layout_width="71dp" android:layout_height="wrap_content" android:id="@+id/txtweight" android:text="@string/defaultweight"></EditText>
    <Button android:text="Calculate BMI" android:id="@+id/btncalculate" android:layout_width="141dp" android:layout_height="wrap_content"></Button>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/txtresult" android:text="@string/insttext" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
<TextView  
    android:id="@+id/textview"
    android:text="@string/hello"
    android:layout_height="wrap_content" android:layout_width="wrap_content"/><!-- wrap_content or fill_parent -->
</LinearLayout>


